@@ -44,12 +44,13 @@ package System.Garlic.Types is
    type Partition_ID is range 0 .. 63;
 
    Null_PID : constant Partition_ID := Partition_ID'First;
-   Last_PID : constant Partition_ID := Partition_ID'Last;
 
-   Boot_PID : Partition_ID := Last_PID;
-   Self_PID : Partition_ID := Null_PID;
+   First_PID : constant Partition_ID := Null_PID + 1;
+   Boot_PID  : Partition_ID := First_PID;
+   Self_PID  : Partition_ID := Null_PID;
 
-   subtype Valid_Partition_ID is Partition_ID range Null_PID + 1 .. Last_PID;
+   subtype Valid_Partition_ID is
+     Partition_ID range First_PID .. Partition_ID'Last;
    --  A partition whose ID fits in Valid_Partition_ID is a real partition
 
    Partition_ID_Increment : constant Valid_Partition_ID := 10;
